# osmosis-cli-wrapper

./: Cargo.toml  osmosis-cli-wrapper
config/: rover-osmosis5-contracts.json
json/: redbank-deposit.json
json/accountNft/: query-all_tokens.json  query-owner_of.json  query-tokens.json
json/creditManager/: execute-borrow.json  execute-create_credit_account.json  execute-deposit.json  execute-deposit_withdraw_borrow.json  execute-lend.json  execute-repay.json  execute-withdraw.json  query-all_debt_shares.json  query-debt_amounts.json  query-total_debt_shares.json  query-user_position.json  query-vault_config.json  query-vaults_info.json
json/redbank/: query-market.json  query-user_collaterals.json  query-user_debt.json  query-user_position.json
src/: main.rs
