[package]
name = "osmosis-cli-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0" 
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
clap = { version = "3.1.6", features = ["derive"] }
base64 = "0.21.0"
